# ToolMaker

./: .dockerignore  .gitignore  .gitmodules  README.md  push_image.sh  pyproject.toml
.github/workflows/: build.yml  ci.yml
benchmark/: README.md
benchmark/tasks/: esm_fold_predict.yaml
benchmark/tests/: conftest.py  test_conch_extract_features.py  test_cytopus_db.py  test_esm_fold_predict.py  test_flowmap_overfit_scene.py  test_medsam_inference.py  test_medsss_generate.py  test_modernbert_predict_masked.py  test_musk_extract_features.py  test_nnunet_train_model.py  test_pathfinder_verify_biomarker.py  test_retfound_feature_vector.py  test_stamp_extract_features.py  test_stamp_train_classification_model.py  test_tabpfn_predict.py  test_uni_extract_features.py  utils.py
docker/: installed.Dockerfile  runtime.Dockerfile  tool.Dockerfile
notebooks/: runtime_demo.ipynb
scripts/: toolmaker_function_runner.py
tests/toolmaker/actions/: test_actions.py  test_web.py
tests/toolmaker/utils/: test_bash.py  test_env.py
toolmaker/: __main__.py  cli.py  definition.py  run.py
toolmaker/actions/: __init__.py  actions.py  bash.py  errors.py  io.py  web.py
toolmaker/agent/: __init__.py  agent.py  state.py
toolmaker/llm/: __init__.py  completions.py
toolmaker/runtime/: __init__.py  api.py  client.py  code.py  server.py
toolmaker/tasks/: assess.py  diagnose.py  implement_function.py  install.py  make_plan.py  make_tool.py  rewrite_function.py  summarize_paper.py
toolmaker/utils/: __init__.py  bash.py  env.py  io.py  jupyter.py  latex.py  llm.py  logging.py  papers.py  paths.py  visualize.py
